made new shoes section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,35 @@
 </section>
 <!-- shoes section -->
 <section class="shoes">
-    
+    <div class="category">
+        <a href="#" id="black">All T-Toe</a>
+        <a href="#">Samba</a>
+        <a href="#">Gazelle</a>
+        <a href="#">Spezial</a>
+    </div>
+    <div class="shoes-card">
+    <div class="shoes-options">
+        <img src="img/shoes1.png" alt="">
+        <h3>GAZELLE BOLD SHOES</h3>
+        <p>Originals</p>
+    </div>
+    <div class="shoes-options">
+        <img src="img/shoes2.png" alt="">
+        <h3>GSamba OG Shoes</h3>
+        <p>Originals</p>
+    </div>
+   
+    <div class="shoes-options">
+        <img src="img/shoes4.png" alt="">
+        <h3>GAZELLE BOLD SHOES</h3>
+        <p>Originals</p>
+    </div>
+    <div class="shoes-options">
+        <img src="img/shoes5.png" alt="">
+        <h3>GAZELLE INDOOR SHOES</h3>
+        <p>Originals</p>
+    </div>
+    </div>
 </section>
 
 
